# curso-python-LPY-102

./: README.md
datasets/: clientes.csv  logs_app.txt  logs_web.csv  productos.csv  ventas.csv
notebooks/modulo1_repaso_entorno/: 01-teoria_repaso.ipynb  02-teoria_entornos.ipynb
notebooks/modulo2_testing_debug_logging/: 01-teoria_testing.ipynb  02-teoria_logging_debug.ipynb  03-lab_bateria_tests_y_logs.ipynb  operaciones.py  test_es_par.py  test_operaciones.py  test_parametrizado.py  test_pruebas.py
notebooks/modulo3_paquetes_distribucion/: 01-teoria_paquetes.ipynb  02-teoria_pyproject.ipynb  03-lab_pequeno_paquete_instalable.ipynb  utilidades.py
notebooks/modulo3_paquetes_distribucion/mi_lib/: pyproject.toml  test_mi_lib.py  test_script_mi_saludo.py
notebooks/modulo3_paquetes_distribucion/mi_lib/src/mi_lib/: __init__.py  operaciones.py  texto.py
notebooks/modulo3_paquetes_distribucion/mi_lib/src/mi_lib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
notebooks/modulo3_paquetes_distribucion/paquete_demo/: pyproject.toml
notebooks/modulo3_paquetes_distribucion/paquete_demo/src/paquete_demo/: saludos.py
notebooks/modulo3_paquetes_distribucion/paquete_demo/src/paquete_demo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
notebooks/modulo3_paquetes_distribucion/paquete_demo/src/paquete_demo/.github/workflows/: build.yaml
notebooks/modulo4_iteradores_generadores_comprehensions/: 01-teoria_iteradores.ipynb  02-teoria_generadores.ipynb  03-teoria_comprehensions.ipynb  04-lab_iteradores_generadores.ipynb  demo.txt
(+40 files in other folders)
