[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mi_lib"
version = "0.1.0"
description = "Ejemplo de paquete instalable creado en el laboratorio"
authors = [{name="Alumno", email="alumno@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
mi-saludo = "mi_lib.texto:mayus"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
