[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paquete_demo"
version = "0.1.0"
description = "Un paquete de ejemplo para el curso LPY-102"
authors = [ { name = "Daniel", email = "dvilches@indra.es" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
demo-saludo = "paquete_demo.saludos:hola"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
